[package]
name = "atlas"
version = "0.1.0"
authors = ["krissemicolon <krissemicolon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
# TUI
tui = "0.14.0"
termion = "1.5"
# Tracing
libtraceroute = "0.1.0"
curl = "0.4.39"